script names fix

--- a/recommendations/templates/actions.html
+++ b/recommendations/templates/actions.html
@@ -1,4 +1,4 @@
 <div id="actions">
-    <div class="action_button" onclick="newUser">Nowy użytkownik</div>
-    <div class="action_button" onclick="existingUser">Istniejący użytkownik</div>
+    <div class="action_button" onclick="newUser()">Nowy użytkownik</div>
+    <div class="action_button" onclick="existingUser()">Istniejący użytkownik</div>
 </div>
